# bigcodebench

./: setup.cfg  test_load_bench_data.py
Requirements/: requirements-eval.txt
bigcodebench/: evaluate.py  generate.py
bigcodebench/eval/: __init__.py  utils.py
