[metadata]
name = bigcodebench
description = "Evaluation package for BigCodeBench"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigcode-project/bigcodebench
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.8
dependency_links =
install_requires =
    appdirs==1.4.4
    fire==0.7.0
    multipledispatch==1.0.0
    tqdm==4.67.1
    pqdm==0.2.0
    tempdir==0.7.1
    termcolor==3.1.0
    wget==3.2
    transformers==4.51.3
    datasets==2.19.1
    numpy==1.26.4
    tensorflow==2.17.1
    openai==1.79.0
    matplotlib==3.10.3
    protobuf==5.29.4

[options.entry_points]
console_scripts =
    bigcodebench.evaluate = bigcodebench.evaluate:main
    bigcodebench.sanitize = bigcodebench.sanitize:main
    bigcodebench.syncheck = bigcodebench.syncheck:main
    bigcodebench.legacy_sanitize = bigcodebench.legacy_sanitize:main
    bigcodebench.generate = bigcodebench.generate:main
    bigcodebench.inspect = bigcodebench.inspect:main
